--- a/index.css
+++ b/index.css
@@ -8,14 +8,25 @@
 	padding: 50px;
 	background-color: white;
 	font-family:'Segoe UI', Verdana, sans-serif;
+	font-size: 1.2rem;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0,5);
 	border: groove 1px black;
+	
 }
 
 
 /*Header*/
 
-header {
+.text-logo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: -20px;
+}
+.fa-apple {
+	font-size: 2.5rem;
+}
+.myheader {
 	display: flex;
 	justify-content: space-between;
 }
@@ -27,6 +38,7 @@ header {
 
 .top-text {
 	color: red;
+	margin-bottom: -15px;
 }
 h1 {
 	margin: 0px 0px 15px;
@@ -76,11 +88,18 @@ h1 {
 
   /*main section*/
 
+  .main-section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+ }
+
   .img-top-text {
 	font-weight: 600;
-	font-size: 1.1rem;
+	font-size: 1.4rem;
 	display: flex;
 	justify-content: center;
+	padding: 35px 0;
   }
 
   .img-and-text-container {
@@ -108,14 +127,22 @@ h1 {
 	font-size: 1.5rem;
 	font-weight: 600;
 	padding-bottom: 20px;
-
  }
 
-
- .main-section {
+ .model-text {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
  }
+
+ .text {
+	width: 700px;
+ }
+
+ .price-container {
+	display: flex;
+	align-items: center;
+ }
+
 
  
