--- a/index.css
+++ b/index.css
@@ -141,6 +141,10 @@ h1 {
 	text-align: center;
  }
 
+ .hard-drive {
+	font-weight: 600;
+ }
+
  .storage-container {
 	display: flex;
 	padding: 25px;
